--- a/main-ring-signature.tex
+++ b/main-ring-signature.tex
@@ -12,7 +12,7 @@
 %\bibliographystyle{plainurl}% the recommended bibstyle
 
 % Author macros::begin %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\title{An Efficient Ring Signature without Random Oracles}
+\title{A Shorter Ring Signature from the SXDH assumption}
 %\titlerunning{An Efficient Ring Signature in the Standard Model} %optional, in case that the title is too long; the running title should fit into the top page column
 
 %% Please provide for each author the \author and \affil macro, even when authors have the same affiliation, i.e. for each author there needs to be the  \author and \affil macros
