--- a/our-construction/our-hashes-sxdh.tex
+++ b/our-construction/our-hashes-sxdh.tex
@@ -1,70 +1,131 @@
 % !TEX root = ../main-ring-signature.tex
 
-We instantiate definitions \ref{def:hash1} and \ref{def:hash2}  with, respectively, the functions $g$ and $h$ as defined as follows.
+We instantiate definitions \ref{def:hash1} and \ref{def:hash2}  with, respectively, the functions $g$ and $h$ defined in this section. 
 
-\paragraph{The function $h$.} The algorithm $\KGen$ returns the description of an asymmetric group plus ElGamal encryption keys $[\vecb{u}]_1$  and $[\vecb{v}]_2$. Let $\mathcal{M}=\mathcal{Q}_m$, $\mathcal{Y}=[0,m]$, and $\vecb{\beta}\in\bits^m$, and define
+We additionally show how to compute zero-knowledge proofs of membership in the message space of $h$ and of satisfiability of $g_k(x)=g_k(x')$.
+We obtain shorter proofs replacing some commitments by ElGamal encryptions as done in \cite{PKC:EscGro14}. Although the security of this shorter proofs is shown in \cite{PKC:EscGro14}, for completeness we include in Appendix XXX the security proofs of our instantiations of the general framwork described in \cite{PKC:EscGro14}.
+
+In Appendix XXX we give a much simpler instantiation of this functions, but we can only prove security under a stronger assumption. 
+
+\subsubsection{The function $h$.} Consider Groth-Sahai commitment keys $[\vecb{u}_1]_1,[\vecb{u}_2]_1$ and define $[\matr{U}]_1 = [\vecb{u}_1,\vecb{u}_2]_1\in\GG_1^{2\times 2}$,  and consider also ElGamal public key $[\vecb{v}]_2\in\GG_2^2$. The message space of $h$ is $\mathcal{M}$, a set of matrices $\mathcal{Q}_m$ defined as follows
 \begin{align*}
 &\mathcal{Q}_m^\vecb{\beta} := \left\{
 \begin{array}{c}
 \matr{A} \in \Z_q^{2\times m}:
 \exists \vecb{r}\in\Z_q^m\text{ s.t. }
-{\matr{A} = \pmatri{0\\\vecb{\beta}^\top}+\vecb{u}\vecb{r}^\top
+{\matr{A} = \matr{U}\pmatri{\vecb{\beta}^\top\\\vecb{r}^\top}
 %\matr{B} = \pmatri{0\\\vecb{\beta}^\top}+\vecb{v}\vecb{s}^\top
 }
 \end{array}\right\},
 \ \mathcal{Q}_m := \cup_{\vecb{\beta}\in\bits^m} \mathcal{Q}_m^\vecb{\beta},\\
 &\text{and } h(\matr{A}):= \sum_{i=1}^m\vecb{a}_i,
 \end{align*}
+where $\vecb{\beta}\in\bits^m$, and the space for hashes is $\mathcal{Y}=\Z_q^2$. The function is just $h(\matr{A})=\sum_{i=1}^m \vecb{a}_i$.
 
-Note that, if $A=(\vecb{a}_1\cat\cdots\cat\vecb{a}_m)\in\mathcal{Q}_m$, then $[\vecb{a}_i]_1$ is an ElGamal encryption $\Enc_{[\vecb{u}]_1}(\beta_i;r_i)$.
-
-%It might seem odd to define $\mathcal{Q}_m$ as a set of pairs of matrices in both groups while $h$ only require elements in one group. However, this will be crucial in the security proof of our ring signature, where we need to compute $[vk \vecb{\beta}]_2$, for some $vk\in\Z_q$,
-%from  $[\vecb{\beta}]_2$ without knowledge of its discrete logarithm. For simplicity, we may just write $h([\matr{A}]_1)$ for $[\matr{A}]_1\in \GG_1^{2\times m}$ (which is still well defined).
-
-%Although is hard to compute $h$, is easy to show that $h(A)=h(A')$ whenever elements of $A'$ are re-randomizations of the elements of $A$. That is, for each $\vecb{a}'\in A'$ there exists a unique  $\vecb{a}\in A$ and $\delta\in\Z_q$ such that $\vecb{a}' = \vecb{a}+\delta\vecb{u}$. Given all the random coins used for rerandomization, the statement $h(A)=h(A')$ can be proved using Groth-Sahai.
-
-Note that $[h(\matr{A})]_1$ outputs an encryption of the hamming weight of $\vecb{\beta}$. Although is possible to find collisions, two matrices form a collision if they encrypt bitstrings with the same hamming weight or equivalently, the decryptions are equal up to a permutation. Consequently, to restore collision resistance, we weaken the equality relation to the following equivalence relation
+If $A=(\vecb{a}_1\cat\cdots\cat\vecb{a}_m)\in\mathcal{Q}_m$, then $[\vecb{a}_i]_1$ is a Groth-Sahai commitment $\Com_{[\matr{U}]_1}(\beta_i;r_i)$.
+Therefore $[h(\matr{A})]_1$ outputs a Groth-Sahai commitment to the hamming weight of $\vecb{\beta}$, that is $[h(\matr{A})]_2 = \Com_{[\matr{U}]}(\sum_{i=1}^m \beta_i;\sum_{i=0}^m r_i)$. Although is possible to find collisions, it happens only if the matrices open to bitstrings with the same hamming weight or equivalently, the openings are equal up to a permutation. Consequently, to restore collision resistance, we weaken the equality relation to the following equivalence relation
 $$
-\matr{A}' \equiv_\vecb{u} \matr{A} \iff \exists \matr{P}\in\mathcal{S}_m, \vecb{\delta}\in\Z_q^m \text{ s.t. } \matr{A}' = \matr{A}\matr{P} + \vecb{u}\vecb{\delta}^\top,
+\matr{A}' \equiv_\vecb{u} \matr{A} \iff \exists \matr{P}\in\mathcal{S}_m, \vecb{\delta}\in\Z_q^m \text{ s.t. } \matr{A}' = \matr{A}\matr{P} + \vecb{u}_2\vecb{\delta}^\top,
 $$
 where $\mathcal{S}_m\subset \bits^{m\times m}$ is the set of permutation matrices of size $m$.
 
-Lets see that is in fact impossible to find collisions $\matr{A},\matr{A}'\in\mathcal{Q}_m$ such that $\matr{A}\not\equiv_\vecb{u}\matr{A}'$ and $h(\matr{A})=h(\matr{A}')$. Assume that $\matr{A}=\smallpmatrix{0\\\vecb{\beta}^\top}+\vecb{u}\vecb{r}^\top,\matr{A}'=\smallpmatrix{0\\{\vecb{\beta}'}^\top}+\vecb{u}\vecb{\delta}^\top$. Since $\vecb{\beta}$ and $\vecb{\beta}'$ have the same hamming weigh there exists a permutation matrix $\matr{P}$ such that $\vecb{\beta}^\top\matr{P} = {\vecb{\beta}'}^\top$, and hence
+Whenever $\matr{U}$ is chosen from the perfectly binding distribution, is impossible to find collisions $[\matr{A}]_1,[\matr{A}]_1'\in[\mathcal{Q}_m]_1$ such that $\matr{A}\not\equiv_\vecb{u}\matr{A}'$ and $h(\matr{A})=h(\matr{A}')$. Given $\matr{A},\matr{A}'\in\mathcal{Q}_m$ we may assume that $\matr{A}=\matr{U}\smallpmatrix{\vecb{\beta}^\top\\\vecb{r}^\top},\matr{A}'=\matr{U}\smallpmatrix{{\vecb{\beta}'}^\top\\\vecb{\delta}^\top}$. Since $\vecb{\beta}$ and $\vecb{\beta}'$ must have the same hamming weigh there exists a permutation matrix $\matr{P}$ such that $\vecb{\beta}^\top\matr{P} = {\vecb{\beta}'}^\top$, and hence
 \begin{align*}
-\matr{A}' &= \pmatri{0\\\vecb{\beta}^\top\matr{P}} + \vecb{u}\vecb{\delta} + \vecb{u}\vecb{r}^\top\matr{P} - \vecb{u}\vecb{r}^\top\matr{P}\\
+\matr{A}' &= \matr{U}\pmatri{\vecb{\beta}^\top\matr{P}\\\vecb{\delta}}+ \vecb{u}_2\vecb{r}^\top\matr{P} - \vecb{u}_2\vecb{r}^\top\matr{P}\\
 &=
- \left(\pmatri{0\\\vecb{\beta}^\top} + \vecb{u}\vecb{r}^\top \right)\matr{P} + \vecb{u}(\vecb{\delta}^\top-\vecb{r}^\top\matr{P})\\
+\matr{U} \pmatri{\vecb{\beta}^\top\\\vecb{r}^\top}\matr{P} + \vecb{u}_2(\vecb{\delta}^\top-\vecb{r}^\top\matr{P})\\
  &=
- \matr{A}\matr{P} + \vecb{u}\tilde{\vecb{\delta}}^\top.
+ \matr{A}\matr{P} + \vecb{u}_2\tilde{\vecb{\delta}}^\top.
 \end{align*}
+When $\matr{U}$ is chosen from the perfectly hiding distribution, it turns out that $\mathcal{Q}_m$ becomes $\mathcal{Q}_m^{0^m}$, which is in fact $\Z_q^{2\times m}$, and there doesn't exist $\matr{A},\matr{A}'$ such that $\matr{A}\not\equiv_{\matr{U}}\matr{A}'$. 
 
-\paragraph{The function $g$.} Consider $\mathcal{M}=\GG^m_2$, $\mathcal{Y}=\GG_2^2$, and $\KGen$ receives a bitstring $\vecb{\beta}\in\bits^m$ together with a and picks a group key $gk$ and samples ElGamal encryption key $\vecb{u}$ together with its decryption key $\vecb{k}\in\Z_q^2$, samples $\matr{A}\gets\mathcal{Q}_m^\vecb{\beta}$, and outputs $[\matr{A}]_1$. The function $g$ is defined as
+Further, is possible to efficiently prove membership in $\mathcal{Q}_m$. It suffices to give Groth-Sahai proofs for
+\begin{equation}
+\beta_i(1-\beta'_i)=0\text{ and }\beta_i=\beta_i' \label{eq:Qm-memb}.
+\end{equation}
+To do so we compute an ElGamal encryption of $\beta'$, $[\vecb{b}]_2 = \smallpmatrix{0\\{[\beta']_2}}+\rho[\vecb{v}]_2$ and proofs
+\begin{align}
+&[\vecb{\theta}]_2 = r(\smallpmatrix{1\\{[0]_2}}-[\vecb{b}]_2)+\delta[\vecb{v}]_2
+&[\vecb{\pi}]_1 = [\vecb{a}]-\delta[\vecb{u}_2]_1\\
+&[\vecb{\theta}']_2 = \smallpmatrix{0\\{[r]_2}}+\delta'[\vecb{v}]
+\end{align}
+ It suffices to prove that
+\begin{align}
+&[\vecb{a}]_1[(\smallpmatrix{0\\1}-\vecb{b})^\top]_2 = [\vecb{u}_2]_1[\vecb{\theta}]_2+[\vecb{\pi}]_1[\vecb{v}^\top]_2\text{ and }\nonumber \\
+&[\vecb{a}]_1(0,[1]_2)-[\vecb{u}_1]_1[\vecb{b}^\top]_2 = [\vecb{u}_2]_1[{\vecb{\theta}'}^\top_1]_2 + [\vecb{\pi}']_1[\vecb{v}^\top]_2 \label{eq:Qm-memb-ElGamal}
+\end{align}
+
+ The following Lemma formally states the security of the previous proofs.
+\begin{lemma}
+\end{lemma}
+
+\paragraph{The function $g$.} In this case $\mathcal{M}=\Z_q^m$, $\mathcal{Y}=\Z_q^2$, and $\KGen$ receives a bitstring $\vecb{\beta}\in\bits^m$ and a group key $gk$. It samples perfectly binding Groth-Sahai commitment and ElGamal keys $[\matr{U}]_1=[(\vecb{u}_1,\vecb{u}_2)]_1,[\vecb{v}]_2$, together with a trapdoor for the commitment scheme $\vecb{k}\in\Z_q^2$ such that $\vecb{k}^\top\vecb{u}_2=0$ and $\vecb{k}^\top(0,1)=1$, samples $\matr{A}\gets\mathcal{Q}_m^\vecb{\beta}$, and outputs $[\matr{A}]_1$. The function $g$ is defined as
 $$
 g_{\matr{A}}(\vecb{x}):= \vecb{k}^\top\matr{A}\vecb{x}=\vecb{\beta}^\top\vecb{x}.
 $$
-Although not efficiently computable, in our ring signature we provide additional elements wich enable to prove that 
- $g_{\matr{A}}(\vecb{x}) = g_{\matr{A}}(\vecb{x}')$ while keeping computationally hard to find collisions for an honestly sampled $[\vecb{x}]_2$ --- which in our ring signature correspond to honestly sampled verification key and we can't use its discrete logarithm ---  and any $[\vecb{x}']_2$ sampled by the adversary.
-We provide Groth-Sahai proofs that $\beta_i[x_i]_2=[x_i\beta_i]_2$, which consists of two vectors
+Although not efficiently computable, we provide additional Groth-Sahai proofs wich enable to prove that 
+ $g_{\matr{A}}(\vecb{x}) = g_{\matr{A}}(\vecb{x}')$ while keeping computationally hard to find collisions. Consider $[\vecb{x}]_2\in\GG_2^m$ --- in our ring signature $[\vecb{x}]_2$ contains $m$ verification keys of a singnature scheme and we will not know its discrete logarithm.
+We provide Groth-Sahai proofs that $\beta_i[x_i]_2=[y_i]_2$ , for each $i\in[m]$, which consists of two vectors\footnote{This are actually slightly optimized version of the orginal proofs. See more on this on PAPER Escala Groth}
+\begin{equation}
+[\vecb{\theta}_i]_2=\pmatri{0\\{r_i[x_i]_2}}+(r_it_i-\delta_i)[\vecb{v}]_2\in\GG_2^2,\ [\vecb{\pi}_i]_1 =(t_i\beta_i-s_i)[\vecb{u}_1]_1+\delta_i[\vecb{u}_2]_1\in\GG_1^2
+\label{eq:wi-proofs}
+\end{equation}
+an ElGamal encryptions to $[x_i]$ and to $[y]_2=[\beta_ix_i]_2$
 $$
-[\vecb{\pi}_i]_1 = \pmatri{0\\{[t]_1}}+\delta_i[\vecb{u}]_1\in\GG_1^2,\ [\vecb{\theta}_i]_2=\pmatri{0\\{[x_i]_2}}-\delta[\vecb{v}]_2\in\GG_2^2
-$$
-plus commitment
-$$
-[\vecb{d}_i]_2 = \pmatri{0\\ [\beta_ix_i]_2} + t_i[\vecb{v}]_2, t_i\gets\Z_q,
+[\vecb{c}_i]_2= \pmatri{0\\{[x_i]_2}}+t_i[\vecb{v}]_2,\ [\vecb{d}_i]_2 = \pmatri{0\\ [y_i]_2} + s_i[\vecb{v}]_2,\ s_i,t_i\gets\Z_q,
 $$
 satisfying the following verification equation
-$$ 
-[\vecb{a}_i]_1([0]_2, {[x_i]_2})-\pmatri{[0]_1\\{[1]_1}}[d^\top_i]_2 =[\vecb{\pi}_i]_1[\vecb{v}^\top]_2+[\vecb{u}]_1[\vecb{\theta}^\top_i]_2.
+\begin{equation}
+[\vecb{a}_i]_1[\vecb{c}^\top]_2-[\vecb{u}_1]_1[\vecb{d}^\top_i]_2 =[\vecb{u}_2]_1[\vecb{\theta}^\top_i]_2+[\vecb{\pi}_i]_1[\vecb{v}^\top]_2.
+\label{eq:wi-verif}
+\end{equation}
+
+We prove the following theorem.
+\begin{theorem}
+Consider the languague the quadratic equation $\beta[x]_2 = [y]_2$, whose variables are $\beta,[x]_2,[y]_2$. 
+The proof system whose crs consists Groth-Sahai commitment key $[\matr{U}]_1$ and ElGamal public key $[\vecb{v}]_2$, the prover computes the proofs as in (\ref{eq:wi-proofs}), and the verifier verifies equation (\ref{eq:wi-verif}), is perfectly complete and sound, and computationally zero-knowledge under the SXDH assumption.
+\end{theorem}
+\begin{proof}
+Completeness follows by inspection. Soundness follows from the fact that in equation (\ref{eq:wi-verif}) the right side has no component in $\vecb{u}_1(0,1)$, which for perfectly binding commitment keys is linearly independent from any matrix of the from $\vecb{u}_2\vecb{z}^\top$ or $\vecb{z}\vecb{v}^\top$. Since the left side component is $\beta[x]_2-[y]_2$, we conclude that $\beta[x]_2 = [y]_2$.
+
+Finally, computational zero-knowledge follows from the following argument.
+When $[\matr{U}]_1$ is sampled from the perfectly hiding distribution, $\vecb{u}_1 = \mu\vecb{u}_2$, for some random $\mu$. In this setting we can sample $\vecb{a} = r\vecb{u}_2$ without changing $\vecb{a}$'s distribution, and we can simulate the proofs for any $[\vecb{c}]_2,[\vecb{d}]_2$ as 
+\begin{equation} \label{eq:sim-proofs}
+[\vecb{\theta}]_2 = r\mu[\vecb{c}]_2-\mu[\vecb{d}]_2-\delta[\vecb{v}]_2\text{ and }[\vecb{\pi}]_1 = \delta[\vecb{u}_2]_1\text{, for } \delta\gets\Z_q.
+\end{equation} 
+In particular, our simulator considers $[\vecb{c}]=s[\vecb{v}]_2,[\vecb{d}]_2=t[\vecb{v}]_2$ for $s,t\gets\Z_q$.
+
+If there is an adversary $\advA$ which tells apart a real proof from a simulated one, we can construct an adversary against the semantic security of ElGamal. Our adversary  runs $\advA$ until it outputs $\beta,[x]_2,[y]_2$ and request a ciphertexts $[\vecb{c}]_1$ which is the encryption of either $[x]_2$ or $0$. It defines $[\vecb{a}]_1=r[\vecb{u}_2]_1$,$ r\gets\Z_q$, computes $[\vecb{d}]_2 = \beta[\vecb{c}]_2 + \rho[\vecb{v}]_2$  and simulates $[\vecb{\theta}]_2,[\vecb{\pi}]_1$ as in (\ref{eq:sim-proofs}), gives $[\vecb{a}]_1,[\vecb{c}]_2,[\vecb{d}]_2,[\vecb{\theta}]_2,[\vecb{\pi}]_1$ to $\advA$, and outputs whatever $\advA$ outputs. Clearly, when $[\vecb{c}]_1$ encrypts $[x]_2$, the proof follows exactly the same distribution of an honestly computed proof, and when encrypts $0$ is distributed as te simulated proof.
+\end{proof} 
+
+Intuitively, given $[\matr{A}]_1$ it is hard to find $\vecb{x}\neq 0$ such that $g_{\matr{A}}(\vecb{x})=0$. Since the opening of $[\matr{A}]_1$ is computationally hidden  may open to $\vecb{b}$ that contains a single $1$ at a random position $i\gets[m]$, then, by the hiding property Groth-Sahai commitments and the fact that at least one coordinate of $\vecb{x}$ is not zero, $g_\matr{A}(\vecb{x}) = x_i$ with probability $1/m$. Formally, we prove the following Lemma.
+\begin{lemma}
+For any adversary $\advA$ there exists an adversary $\advB$ against DDH in $\GG_1$ such that the probability that $\advA([\matr{A}],[\matr{U}]_1)$, outputs a collision $[\vecb{x}],[\vecb{x}']$ for $h_\matr{A}$  is less than $2m \adv_{\mathrm{DDH}}(\advB)$, where $\matr{A}\gets\mathcal{Q}^\vecb{\beta}_m$ and $[\matr{U}]$ is a perfectly binding commitment key.
+\end{lemma}
+\begin{proof}
+The proof follows from the indistinguishability of the following games.
+\begin{description}
+\item[$\sfGame_0(\advA)$:] This game honestly runs the colission resitance experiment for $h_{\matr{A}}$ and outputs 1 if $\vecb{x}\neq\vecb{x}'$ and $h_\matr{A}(\vecb{x})=h_{\matr{A}}(\vecb{x}')$.
+\item[$\sfGame_1(\advA)$:] This games picks a random $i\gets[m]$ and aborts if $[x_i]_2-[x'_i]=0.$
+\item[$\sfGame_2(\advA)$:] This game is exactly as $\sfGame_1$ but $[\matr{U}]_1$ is sampled from the perfectly hiding distribution.
+\item[$\sfGame_3(\advA)$:] This game is exactly as $\sfGame_2$ but $\matr{A}$ is sampled from $\matr{Q}_m^{\vecb{\beta}_i}$, where $\beta_i\in\bits^m$ contains a single 1 at postion $i$.
+\item[$\sfGame_4(\advA)$:] This game is exactly as $\sfGame_3$ but $[\matr{U}]_1$ is sampled from the perfectly binding distribution.
+\end{description}
+The probability we want to bound is $\Pr[\sfGame_0(A)=1]$ and it holds that $\Pr[\sfGame_0(\advA)=1]\leq m\Pr[\sfGame_1(A)=1]$ since $i$ is information theoretically hidden to $\advA$. It also holds that $\Pr[\sfGame_1(\advA)=1]-\Pr[\sfGame_2(\advA)=1]\leq\adv_\mathrm{DDH}(\advB)$, for adversary $\advB$, since the only change in the games is the Groth-Sahai commitment key wich is changed from perfectly binding to perfectly hiding.
+It also holds that $\Pr[\sfGame_2(\advA)=1]-\Pr[\sfGame_3(\advA)=1]=0$, since commitment keys are perfectly binding in both games, and similarly as before, $\Pr[\sfGame_4(\advA)=1]-\Pr[\sfGame_3(\advA)=1]\leq\adv_\mathrm{DDH}(\advB)$.
+
+Finaly, $\Pr[\sfGame_4(\advA)=1]=0$ since in this case $x_i \neq x'_i$ and $g_\matr{A}(\vecb{x}) = x_i$.
+\end{proof}
+
+A proof that $g_\matr{A}(\vecb{\beta}) = g_\matr{A}(\vecb{\beta}')$ can be derived from the sum of the previous proof plus re-randomization for keeping the proof zero-knowledge. That is
 $$
-A proof that $g_\matr{A}(\vecb{\beta}) = g_\matr{A}(\vecb{\beta}')$ can be derived from the addition of the previous proof plus re-randomization for keeping the proof zero-knowledge. That is
-$$
-[\vecb{\pi}]_1 := \sum_{i=1}^m [\vecb{\pi}_i]_1+\delta[\vecb{u}]_1
+[\vecb{\theta}]_2 := \sum_{i=1}^m [\vecb{\theta}_i]_2-\delta[\vecb{v}]_2
 \text{ and }
-[\vecb{\theta}]_2 := \sum_{i=1}^m [\vecb{\theta}_i]_2-\delta[\vecb{v}]_2.
+[\vecb{\pi}]_1 := \sum_{i=1}^m [\vecb{\pi}_i]_1+\delta[\vecb{u}]_1.
 $$
 such that
 $$
-\left(\sum_{i=1}^m [\vecb{a}_i]([0]_1,[x_i]_1)\right)-\pmatri{{[0]_1}\\{[1]_1}}\left(\sum_{i=1}^m[\vecb{\beta}_ix_i]_2\right)^\top =
+\left(\sum_{i=1}^m [\vecb{a}_i]\right)\pmatri{{[0]_1}\\{[x_i]_1}}^\top-\pmatri{{[0]_1}\\{[1]_1}}\left(\sum_{i=1}^m[\vecb{d}]_2\right)^\top =
 [\vecb{\pi}]_1[\vecb{v}^\top]_2 + [\vecb{u}_1][\vecb{\theta}_i^\top]_2
 $$ Consequetly, in our scheme we will publish  $[\vecb{\beta}_ix_i]_2$ and the proofs $[\vecb{\pi}_i]_1,[\vecb{\theta}_i]_2$ which will render possible to prove $g_\matr{A}(\vecb{\beta})=g_\matr{A}(\vecb{\beta}')$.
 
