--- a/our-construction/our-hashes-sxdh.tex
+++ b/our-construction/our-hashes-sxdh.tex
@@ -1,13 +1,13 @@
 % !TEX root = ../main-ring-signature.tex
 
-We instantiate definitions \ref{def:hash1} and \ref{def:hash2}  with, respectively, the functions $g$ and $h$ defined in this section. 
+We instantiate definitions \ref{def:hash1} and \ref{def:hash2}  with, respectively, the functions $g$ and $h$ defined in this section. Function $h$ is unconditionally collision resistant, under a relaxation of the notion of equality of purported collisions, while the latter function is collision resistant under the SXDH assumption.
 
-We additionally show how to compute zero-knowledge proofs of membership in the message space of $h$ and of satisfiability of $g_k(x)=g_k(x')$.
-We obtain shorter proofs replacing some commitments by ElGamal encryptions as done in \cite{PKC:EscGro14}. Although the security of this shorter proofs is shown in \cite{PKC:EscGro14}, for completeness we include in Appendix XXX the security proofs of our instantiations of the general framwork described in \cite{PKC:EscGro14}.
+%We additionally show how to compute zero-knowledge proofs of membership in the message space of $h$ and of satisfiability of $g_k(x)=g_k(x')$.
+%We obtain shorter proofs replacing some commitments by ElGamal encryptions as done in \cite{PKC:EscGro14}. Although the security of this shorter proofs is shown in \cite{PKC:EscGro14}, for completeness we include in Appendix XXX the security proofs of our instantiations of the general framwork described in \cite{PKC:EscGro14}.
 
-In Appendix XXX we give a much simpler instantiation of this functions, but we can only prove security under a stronger assumption. 
+Our constructions are inspired on much simpler instantiation of this functions which we can only prove secure under a stronger assumption, the Permutation Pairing assumption introduced by Groth and Lu \cite{AC:GroLu07}. This simpler instantiation can be found in Appendix XXX. 
 
-\subsubsection{The function $h$.} Consider Groth-Sahai commitment keys $[\vecb{u}_1]_1,[\vecb{u}_2]_1$ and define $[\matr{U}]_1 = [\vecb{u}_1,\vecb{u}_2]_1\in\GG_1^{2\times 2}$,  and consider also ElGamal public key $[\vecb{v}]_2\in\GG_2^2$. The message space of $h$ is $\mathcal{M}$, a set of matrices $\mathcal{Q}_m$ defined as follows
+\subsubsection{The function $h$.} Consider Groth-Sahai commitment keys  $[\matr{U}]_1 = [\vecb{u}_1|\vecb{u}_2]_1\in\GG_1^{2\times 2},[\matr{V}]_2=[\vecb{v}_1|\vecb{v}_2]_2\in\GG_2^{2\times 2}$. The message space of $h$ a set of matrices $\mathcal{Q}_m$ defined as follows
 \begin{align*}
 &\mathcal{Q}_m^\vecb{\beta} := \left\{
 \begin{array}{c}
@@ -20,10 +20,10 @@ In Appendix XXX we give a much simpler instantiation of this functions, but we c
 \ \mathcal{Q}_m := \cup_{\vecb{\beta}\in\bits^m} \mathcal{Q}_m^\vecb{\beta},\\
 &\text{and } h(\matr{A}):= \sum_{i=1}^m\vecb{a}_i,
 \end{align*}
-where $\vecb{\beta}\in\bits^m$, and the space for hashes is $\mathcal{Y}=\Z_q^2$. The function is just $h(\matr{A})=\sum_{i=1}^m \vecb{a}_i$.
+and the space for hashes is $\mathcal{Y}=\Z_q^2$. The function is simply $h(\matr{A})=\sum_{i=1}^m \vecb{a}_i$.
 
 If $A=(\vecb{a}_1\cat\cdots\cat\vecb{a}_m)\in\mathcal{Q}_m$, then $[\vecb{a}_i]_1$ is a Groth-Sahai commitment $\Com_{[\matr{U}]_1}(\beta_i;r_i)$.
-Therefore $[h(\matr{A})]_1$ outputs a Groth-Sahai commitment to the hamming weight of $\vecb{\beta}$, that is $[h(\matr{A})]_2 = \Com_{[\matr{U}]}(\sum_{i=1}^m \beta_i;\sum_{i=0}^m r_i)$. Although is possible to find collisions, it happens only if the matrices open to bitstrings with the same hamming weight or equivalently, the openings are equal up to a permutation. Consequently, to restore collision resistance, we weaken the equality relation to the following equivalence relation
+Therefore $[h(\matr{A})]_1$ outputs a Groth-Sahai commitment to the hamming weight of $\vecb{\beta}$, that is $[h(\matr{A})]_1 = \Com_{[\matr{U}]_1}(\sum_{i=1}^m \beta_i;\sum_{i=0}^m r_i)$. Although is possible to find collisions, it happens only if the matrices open to bitstrings with the same hamming weight or equivalently, the openings are equal up to a permutation. Consequently, to restore collision resistance, we weaken the equality relation to the following equivalence relation
 $$
 \matr{A}' \equiv_\vecb{u} \matr{A} \iff \exists \matr{P}\in\mathcal{S}_m, \vecb{\delta}\in\Z_q^m \text{ s.t. } \matr{A}' = \matr{A}\matr{P} + \vecb{u}_2\vecb{\delta}^\top,
 $$
@@ -31,7 +31,7 @@ where $\mathcal{S}_m\subset \bits^{m\times m}$ is the set of permutation matrice
 
 Whenever $\matr{U}$ is chosen from the perfectly binding distribution, is impossible to find collisions $[\matr{A}]_1,[\matr{A}]_1'\in[\mathcal{Q}_m]_1$ such that $\matr{A}\not\equiv_\vecb{u}\matr{A}'$ and $h(\matr{A})=h(\matr{A}')$. Given $\matr{A},\matr{A}'\in\mathcal{Q}_m$ we may assume that $\matr{A}=\matr{U}\smallpmatrix{\vecb{\beta}^\top\\\vecb{r}^\top},\matr{A}'=\matr{U}\smallpmatrix{{\vecb{\beta}'}^\top\\\vecb{\delta}^\top}$. Since $\vecb{\beta}$ and $\vecb{\beta}'$ must have the same hamming weigh there exists a permutation matrix $\matr{P}$ such that $\vecb{\beta}^\top\matr{P} = {\vecb{\beta}'}^\top$, and hence
 \begin{align*}
-\matr{A}' &= \matr{U}\pmatri{\vecb{\beta}^\top\matr{P}\\\vecb{\delta}}+ \vecb{u}_2\vecb{r}^\top\matr{P} - \vecb{u}_2\vecb{r}^\top\matr{P}\\
+\matr{A}' &= \matr{U}\pmatri{\vecb{\beta}^\top\matr{P}\\\vecb{\delta}^\top}+ \vecb{u}_2\vecb{r}^\top\matr{P} - \vecb{u}_2\vecb{r}^\top\matr{P}\\
 &=
 \matr{U} \pmatri{\vecb{\beta}^\top\\\vecb{r}^\top}\matr{P} + \vecb{u}_2(\vecb{\delta}^\top-\vecb{r}^\top\matr{P})\\
  &=
@@ -41,127 +41,170 @@ When $\matr{U}$ is chosen from the perfectly hiding distribution, it turns out t
 
 Further, is possible to efficiently prove membership in $\mathcal{Q}_m$. It suffices to give Groth-Sahai proofs for
 \begin{equation}
-\beta_i(1-\beta'_i)=0\text{ and }\beta_i=\beta_i' \label{eq:Qm-memb}.
+\beta(1-\beta')=0\text{ and }\beta=\beta' \label{eq:Qm-memb},
 \end{equation}
-To do so we compute an ElGamal encryption of $\beta'$, $[\vecb{b}]_2 = \smallpmatrix{0\\{[\beta']_2}}+\rho[\vecb{v}]_2$ and proofs
+for $\beta=\beta_1,\ldots,\beta_m,\beta'=\beta_1,\ldots,\beta_m$.
+
+To do so we compute a commitment to $\beta'$, $[\vecb{b}]_2 = \beta'[\vecb{v}_1]_2+\rho[\vecb{v}_2]_2$ and proofs
 \begin{align}
-&[\vecb{\theta}]_2 = r(\smallpmatrix{1\\{[0]_2}}-[\vecb{b}]_2)+\delta[\vecb{v}]_2
-&[\vecb{\pi}]_1 = [\vecb{a}]-\delta[\vecb{u}_2]_1\\
-&[\vecb{\theta}']_2 = \smallpmatrix{0\\{[r]_2}}+\delta'[\vecb{v}]
+&[\vecb{\theta}]_2 = r([\vecb{v}_1]_2-[\vecb{b}]_2)+\delta[\vecb{v}_2]_2
+&[\vecb{\pi}]_1 = \beta\rho[\vecb{u}_1]_1-\delta[\vecb{u}_2]_1 \nonumber\\
+&[\vecb{\xi}]_2 = r[\vecb{v}_1]_2+\delta'[\vecb{v}_2]_2
+&[\vecb{\phi}]_2 = \rho[\vecb{u}_1]_1 -\delta'[\vecb{u}_2]_1.
+\label{eq:Qm-memb-proofs}
 \end{align}
- It suffices to prove that
+Such proofs satisfy the following verification equations
 \begin{align}
-&[\vecb{a}]_1[(\smallpmatrix{0\\1}-\vecb{b})^\top]_2 = [\vecb{u}_2]_1[\vecb{\theta}]_2+[\vecb{\pi}]_1[\vecb{v}^\top]_2\text{ and }\nonumber \\
-&[\vecb{a}]_1(0,[1]_2)-[\vecb{u}_1]_1[\vecb{b}^\top]_2 = [\vecb{u}_2]_1[{\vecb{\theta}'}^\top_1]_2 + [\vecb{\pi}']_1[\vecb{v}^\top]_2 \label{eq:Qm-memb-ElGamal}
+&[\vecb{a}]_1([\vecb{v}_1]_2-[\vecb{b}]_2)^\top = [\vecb{u}_2]_1[\vecb{\theta}^\top]_2+[\vecb{\pi}]_1[\vecb{v}^\top_2]_2\text{ and } \label{eq:Qm-memb-verif1} \\
+&[\vecb{a}]_1[\vecb{v}_1^\top]_2-[\vecb{u}_1]_1[\vecb{b}^\top]_2 = [\vecb{u}_2]_1[\vecb{\xi}^\top]_2 + [\vecb{\phi}]_1[\vecb{v}^\top_2]_2 \label{eq:Qm-memb-verif2}
 \end{align}
 
  The following Lemma formally states the security of the previous proofs.
-\begin{lemma}
+\begin{lemma} \label{lemma:Qm-memb}
+Consider the quadratic equation $\beta(1-\beta') = 0$ and the linear equation $\beta = \beta'$, whose variables are $\beta$ and $\beta'$. 
+The proof system whose crs consists Groth-Sahai perfectly binding commitment keys $[\matr{U}]_1,[\matr{V}]_2$, whose prover computes the proofs as in (\ref{eq:Qm-memb-proofs}), and the verifier verifies equations (\ref{eq:Qm-memb-verif1}) and (\ref{eq:Qm-memb-verif2}), is perfectly complete and sound, and computationally zero-knowledge under the SXDH assumption.
 \end{lemma}
+\begin{proof}
+Completeness follows by inspection. Soundness follows from the fact that, whenever $\matr{U},\matr{V}$ come from the perfectly binding distribution, $\vecb{u}_1\vecb{v}_1^\top,\vecb{u}_1\vecb{v}_2^\top,\allowbreak\vecb{u}_2\vecb{v}_1^\top,\allowbreak\vecb{u}_2\vecb{v}_2^\top$ form basis of $\Z_q^{2\times 2}$. Since in equations (\ref{eq:Qm-memb-verif1}) and (\ref{eq:Qm-memb-verif2}) the right sides have no components in $\vecb{u}_1\vecb{v}_1$ and left sides components are, respectively, $\beta(1-\beta')$ and $\beta-\beta'$, we conclude that $\beta(1-\beta') = 0$ and $\beta=\beta'$.
 
-\paragraph{The function $g$.} In this case $\mathcal{M}=\Z_q^m$, $\mathcal{Y}=\Z_q^2$, and $\KGen$ receives a bitstring $\vecb{\beta}\in\bits^m$ and a group key $gk$. It samples perfectly binding Groth-Sahai commitment and ElGamal keys $[\matr{U}]_1=[(\vecb{u}_1,\vecb{u}_2)]_1,[\vecb{v}]_2$, together with a trapdoor for the commitment scheme $\vecb{k}\in\Z_q^2$ such that $\vecb{k}^\top\vecb{u}_2=0$ and $\vecb{k}^\top(0,1)=1$, samples $\matr{A}\gets\mathcal{Q}_m^\vecb{\beta}$, and outputs $[\matr{A}]_1$. The function $g$ is defined as
+Finally, computational zero-knowledge follows from the following argument.
+When $[\matr{U}]_1,[\matr{V}]_2$ are sampled from the perfectly hiding distribution, $\vecb{u}_1 = \mu\vecb{u}_2$ and $\vecb{v}_1 = \nu\vecb{v}_2$, for some random $\mu$ and $\nu$. In this setting we can sample $\vecb{a} = r\vecb{u}_2$ without changing $\vecb{a}$'s distribution, and we can simulate the proofs for any $[\vecb{b}]_2$ as 
+\begin{align} \label{eq:Qm-sim-proofs}
+&[\vecb{\theta}]_2 = r([\vecb{v}_1]_1-[\vecb{b}]_2)+\delta[\vecb{v}_2]_2
+&[\vecb{\pi}]_1 = -\delta[\vecb{u}_2]_1 \nonumber\\
+&[\vecb{\xi}]_2 = r[\vecb{v}_1]_2-\mu[\vecb{b}]_2+\delta'[\vecb{v}_2]_2
+&[\vecb{\phi}]_2 = -\delta'[\vecb{u}_2]_1.
+\end{align} 
+In particular, our simulator considers $[\vecb{b}]_2=\rho[\vecb{v}_2]_2$, for $\rho\gets\Z_q$, which is follows exactly the same distribution as in the honest proof.
+
+Note that both, the honest and the simulated proofs, follows exactly the same distribution. Indeed in both cases, $\vecb{a}$ and $\vecb{b}$ are uniformly distributed in, respectively, $\Span(\vecb{u}_2)$ and $\Span(\vecb{v}_2)$, and the proofs are uniformly chosen among those that satisfy the respective verification equation.
+%If there is an adversary $\advA$ which tells apart a real proof from a simulated one, we can construct an adversary against the semantic security of ElGamal. Our adversary  runs $\advA$ until it outputs solution $\beta$ and request a ciphertext $[\vecb{b}]_2$ to its oracle, which returns the encryption of either $\beta$ or $0$. It defines $[\vecb{a}]_1=r[\vecb{u}_2]_1$,$ r\gets\Z_q$,   and simulates $[\vecb{\theta}]_2,[\vecb{\pi}]_1,[\vecb{\xi}]_2,[\vecb{\phi}]_1$ as in (\ref{eq:Qm-sim-proofs}), gives $[\vecb{a}]_1,[\vecb{b}]_2$ together with the simulated proofs to $\advA$, and outputs whatever $\advA$ outputs. Clearly, when $[\vecb{b}]_1$ encrypts $\beta$, the proof follows exactly the same distribution of an honestly computed proof, and when encrypts $0$ is distributed as the simulated proofs.
+\end{proof} 
+
+\subsubsection{The function $g$.} Consider perfectly binding Groth-Sahai commitment keys $[\matr{U}]_1=[\vecb{u}_1\cat\vecb{u}_2]_1,[\matr{V}]_2 = [\vecb{v}_1\cat\vecb{v}_2]_2$, together with a trapdoor for the commitment scheme $\vecb{k}\in\Z_q^2$ such that $\vecb{k}^\top\vecb{u}_2=0$ and $\vecb{k}^\top\vecb{u}_1=1$, consider also $[\matr{A}]_1$ such that $\matr{A}\gets\mathcal{Q}_m^\vecb{\beta}$. The function $g$ is defined as
 $$
 g_{\matr{A}}(\vecb{x}):= \vecb{k}^\top\matr{A}\vecb{x}=\vecb{\beta}^\top\vecb{x}.
 $$
-Although not efficiently computable, we provide additional Groth-Sahai proofs wich enable to prove that 
- $g_{\matr{A}}(\vecb{x}) = g_{\matr{A}}(\vecb{x}')$ while keeping computationally hard to find collisions. Consider $[\vecb{x}]_2\in\GG_2^m$ --- in our ring signature $[\vecb{x}]_2$ contains $m$ verification keys of a singnature scheme and we will not know its discrete logarithm.
-We provide Groth-Sahai proofs that $\beta_i[x_i]_2=[y_i]_2$ , for each $i\in[m]$, which consists of two vectors\footnote{This are actually slightly optimized version of the orginal proofs. See more on this on PAPER Escala Groth}
+Although not efficiently computable, we add to the function key additional Groth-Sahai proofs wich enable to prove that
+ $g_{\matr{A}}(\vecb{x}) = g_{\matr{A}}(\vecb{x}')$, for some fixed $\vecb{x}$, while keeping computationally hard to find collisions --- in our ring signature $[\vecb{x}]_2$ contains $m$ verification keys of a signature scheme while $\vecb{x}$ contains $m$ secret keys.
+We provide Groth-Sahai proofs that $\beta x=y$, for $\beta=\beta_i,x=x_i,y=\beta_ix_i$, and $i\in[m]$, which consists of two vectors
 \begin{equation}
-[\vecb{\theta}_i]_2=\pmatri{0\\{r_i[x_i]_2}}+(r_it_i-\delta_i)[\vecb{v}]_2\in\GG_2^2,\ [\vecb{\pi}_i]_1 =(t_i\beta_i-s_i)[\vecb{u}_1]_1+\delta_i[\vecb{u}_2]_1\in\GG_1^2
+[\vecb{\psi}]_2=r[\vecb{c}]_2-\delta[\vecb{v}_2]_2\in\GG_2^2,\ [\vecb{\omega}]_1 =(\beta s-t)[\vecb{u}_1]_1+\delta[\vecb{u}_2]_1\in\GG_1^2
 \label{eq:wi-proofs}
 \end{equation}
-an ElGamal encryptions to $[x_i]$ and to $[y]_2=[\beta_ix_i]_2$
+and commitments to $x$ and to $y$
 $$
-[\vecb{c}_i]_2= \pmatri{0\\{[x_i]_2}}+t_i[\vecb{v}]_2,\ [\vecb{d}_i]_2 = \pmatri{0\\ [y_i]_2} + s_i[\vecb{v}]_2,\ s_i,t_i\gets\Z_q,
+[\vecb{c}]_2= x[\vecb{v}_1]_2+s[\vecb{v}_2]_2,\ [\vecb{d}]_2 =y[\vecb{v}_1]_2 + t[\vecb{v}_2]_2,\ s,t\gets\Z_q,
 $$
 satisfying the following verification equation
 \begin{equation}
-[\vecb{a}_i]_1[\vecb{c}^\top]_2-[\vecb{u}_1]_1[\vecb{d}^\top_i]_2 =[\vecb{u}_2]_1[\vecb{\theta}^\top_i]_2+[\vecb{\pi}_i]_1[\vecb{v}^\top]_2.
+[\vecb{a}]_1[\vecb{c}^\top]_2-[\vecb{u}_1]_1[\vecb{d}^\top]_2 =[\vecb{u}_2]_1[\vecb{\psi}^\top]_2+[\vecb{\omega}]_1[\vecb{v}^\top_2]_2.
 \label{eq:wi-verif}
 \end{equation}
 
-We prove the following theorem.
-\begin{theorem}
-Consider the languague the quadratic equation $\beta[x]_2 = [y]_2$, whose variables are $\beta,[x]_2,[y]_2$. 
-The proof system whose crs consists Groth-Sahai commitment key $[\matr{U}]_1$ and ElGamal public key $[\vecb{v}]_2$, the prover computes the proofs as in (\ref{eq:wi-proofs}), and the verifier verifies equation (\ref{eq:wi-verif}), is perfectly complete and sound, and computationally zero-knowledge under the SXDH assumption.
-\end{theorem}
+We prove the following Lemma.
+\begin{lemma} \label{lemma:betax=y}
+Consider the the quadratic equation $\beta x = y$, whose variables are $\beta,x,y$. 
+The proof system whose crs consists of perfectly binding Groth-Sahai commitment keys $[\matr{U}]_1,[\matr{V}]$, whose prover computes the proofs as in (\ref{eq:wi-proofs}), and the verifier verifies equation (\ref{eq:wi-verif}), is perfectly complete and sound, and computationally zero-knowledge under the SXDH assumption.
+\end{lemma}
 \begin{proof}
-Completeness follows by inspection. Soundness follows from the fact that in equation (\ref{eq:wi-verif}) the right side has no component in $\vecb{u}_1(0,1)$, which for perfectly binding commitment keys is linearly independent from any matrix of the from $\vecb{u}_2\vecb{z}^\top$ or $\vecb{z}\vecb{v}^\top$. Since the left side component is $\beta[x]_2-[y]_2$, we conclude that $\beta[x]_2 = [y]_2$.
+Completeness follows by inspection. 
+Soundness follows from the fact that, whenever $\matr{U},\matr{V}$ come from the perfectly binding distribution, $\vecb{u}_1\vecb{v}_1^\top,\vecb{u}_1\vecb{v}_2^\top,\allowbreak\vecb{u}_2\vecb{v}_1^\top,\allowbreak\vecb{u}_2\vecb{v}_2^\top$ form basis of $\Z_q^{2\times 2}$.
+The right side of equation (\ref{eq:wi-verif}) has no component in $\vecb{u}_1\vecb{v}^\top_1$, while the left side component is $\beta x-y$. Hence, we conclude that $\beta x = y$.
 
-Finally, computational zero-knowledge follows from the following argument.
-When $[\matr{U}]_1$ is sampled from the perfectly hiding distribution, $\vecb{u}_1 = \mu\vecb{u}_2$, for some random $\mu$. In this setting we can sample $\vecb{a} = r\vecb{u}_2$ without changing $\vecb{a}$'s distribution, and we can simulate the proofs for any $[\vecb{c}]_2,[\vecb{d}]_2$ as 
+Computational zero-knowledge follows from the following argument.
+When $[\matr{U}]_1,[\matr{V}]_2$ are sampled from the perfectly hiding distribution, $\vecb{u}_1 = \mu\vecb{u}_2$ and $\vecb{v}_1  = \nu\vecb{v}_2$, for some random $\mu$ and $\nu$. In this setting we can sample $\vecb{a} = r\vecb{u}_2$ without changing $\vecb{a}$'s distribution, and we can simulate the proofs for any $[\vecb{c}]_2,[\vecb{d}]_2$ as 
 \begin{equation} \label{eq:sim-proofs}
-[\vecb{\theta}]_2 = r\mu[\vecb{c}]_2-\mu[\vecb{d}]_2-\delta[\vecb{v}]_2\text{ and }[\vecb{\pi}]_1 = \delta[\vecb{u}_2]_1\text{, for } \delta\gets\Z_q.
+[\vecb{\psi}]_2 = r\mu[\vecb{c}]_2-\mu[\vecb{d}]_2-\delta[\vecb{v}_2]_2\text{ and }[\vecb{\omega}]_1 = \delta[\vecb{u}_2]_1\text{, for } \delta\gets\Z_q.
 \end{equation} 
-In particular, our simulator considers $[\vecb{c}]=s[\vecb{v}]_2,[\vecb{d}]_2=t[\vecb{v}]_2$ for $s,t\gets\Z_q$.
+In particular, our simulator considers $[\vecb{c}]=s[\vecb{v}_2]_2,[\vecb{d}]_2=t[\vecb{v}_2]_2$ for $s,t\gets\Z_q$.
 
-If there is an adversary $\advA$ which tells apart a real proof from a simulated one, we can construct an adversary against the semantic security of ElGamal. Our adversary  runs $\advA$ until it outputs $\beta,[x]_2,[y]_2$ and request a ciphertexts $[\vecb{c}]_1$ which is the encryption of either $[x]_2$ or $0$. It defines $[\vecb{a}]_1=r[\vecb{u}_2]_1$,$ r\gets\Z_q$, computes $[\vecb{d}]_2 = \beta[\vecb{c}]_2 + \rho[\vecb{v}]_2$  and simulates $[\vecb{\theta}]_2,[\vecb{\pi}]_1$ as in (\ref{eq:sim-proofs}), gives $[\vecb{a}]_1,[\vecb{c}]_2,[\vecb{d}]_2,[\vecb{\theta}]_2,[\vecb{\pi}]_1$ to $\advA$, and outputs whatever $\advA$ outputs. Clearly, when $[\vecb{c}]_1$ encrypts $[x]_2$, the proof follows exactly the same distribution of an honestly computed proof, and when encrypts $0$ is distributed as te simulated proof.
+Note that both, the honest and the simulated proofs, follows exactly the same distribution. Indeed in both cases, $\vecb{a}$ and $\vecb{c},\vecb{d}$ are uniformly distributed in, respectively, $\Span(\vecb{u}_2)$ and $\Span(\vecb{v}_2)$, and the proofs are uniformly chosen among those that satisfy the respective verification equation.
+
+%If there is an adversary $\advA$ which tells apart a real proof from a simulated one, we can construct an adversary against the semantic security of ElGamal. Our adversary  runs $\advA$ until it outputs $\beta,[x]_2,[y]_2$ and request a ciphertexts $[\vecb{c}]_1$ which is the encryption of either $[x]_2$ or $0$. It defines $[\vecb{a}]_1=r[\vecb{u}_2]_1$,$ r\gets\Z_q$, computes $[\vecb{d}]_2 = \beta[\vecb{c}]_2 + \rho[\vecb{v}]_2$  and simulates $[\vecb{\psi}]_2,[\vecb{\omega}]_1$ as in (\ref{eq:sim-proofs}), gives $[\vecb{a}]_1,[\vecb{c}]_2,[\vecb{d}]_2,[\vecb{\psi}]_2,[\vecb{\omega}]_1$ to $\advA$, and outputs whatever $\advA$ outputs. Clearly, when $[\vecb{c}]_1$ encrypts $[x]_2$, the proof follows exactly the same distribution of an honestly computed proof, and when encrypts $0$ is distributed as te simulated proof.
 \end{proof} 
 
-Intuitively, given $[\matr{A}]_1$ it is hard to find $\vecb{x}\neq 0$ such that $g_{\matr{A}}(\vecb{x})=0$. Since the opening of $[\matr{A}]_1$ is computationally hidden  may open to $\vecb{b}$ that contains a single $1$ at a random position $i\gets[m]$, then, by the hiding property Groth-Sahai commitments and the fact that at least one coordinate of $\vecb{x}$ is not zero, $g_\matr{A}(\vecb{x}) = x_i$ with probability $1/m$. Formally, we prove the following Lemma.
+We will additionally add to $g$'s key proofs showing that $\matr{A}\in\mathcal{Q}_m$, as shown in Lemma \ref{lemma:Qm-memb}, and proofs that $\beta_ix_i = y_i$. Formally, we get that $\G$ on input a group key, field elements $x_1,\ldots x_m$, and $\vecb{\beta}\in\bits^m$, samples perfectly binding Groth-Sahai commitment keys $[\matr{U}]_1,[\matr{V}]_2$ and $\matr{A}\gets\mathcal{Q}_m^\vecb{\beta}$. Additionally, for $i\in[m]$, samples commitments $[\vecb{b}_i]_2 = \beta_i[\vecb{v}_1]_1+\rho_i[\vecb{v}_2]_2$, $[\vecb{c}_i]_2  = x_i[\vecb{v}_1]_2+s_i[\vecb{v}_2]_2$ and $[\vecb{d}_i]_2  = \beta_ix_i[\vecb{v}_1]_2+t_i[\vecb{v}_2]_2$ and proofs $[\vecb{\theta}_i]_2,[\vecb{\pi}_i]_1,[\vecb{\xi}]_2,[\vecb{\phi}]_1$ and $[\vecb{\psi}]_2,[\vecb{\omega}]_1$ computed as in (\ref{eq:Qm-memb-proofs}) and (\ref{eq:wi-proofs}), respectively. The function key is
+$$
+k = ([\matr{U}]_1,[\vecb{v}]_2,[\matr{A}]_1,[\matr{B}]_2,[\matr{C}]_2,[\matr{D}]_2,[\matr{\Theta}]_2,[\matr{\Pi}]_1,
+[\matr{\Xi}]_2,[\matr{\Phi}]_1,[\matr{\Psi}]_2,[\matr{\Omega}]_1),
+$$
+where the matrices columns are denoted by the corresponding lower case letter.
+
+Next, we show that given $k$  it is hard to find $\vecb{x}\neq 0$ such that $g_{\matr{A}}(\vecb{x})=0$. Intuitively, since the opening of $[\matr{A}]_1$ is computationally hidden, it  may open to some $\vecb{\beta}\in\bits^m$ that contains a single $1$ at a random position $i\gets[m]$. Then, by the hiding property Groth-Sahai commitments and the fact that at least one coordinate of $\vecb{x}$ is not zero, $g_\matr{A}(\vecb{x}) = x_i\neq 0$ with probability $1/m$. 
+
+Formally, we prove the Lemma below. 
 \begin{lemma}
-For any adversary $\advA$ there exists an adversary $\advB$ against DDH in $\GG_1$ such that the probability that $\advA([\matr{A}],[\matr{U}]_1)$, outputs a collision $[\vecb{x}],[\vecb{x}']$ for $h_\matr{A}$  is less than $2m \adv_{\mathrm{DDH}}(\advB)$, where $\matr{A}\gets\mathcal{Q}^\vecb{\beta}_m$ and $[\matr{U}]$ is a perfectly binding commitment key.
+For any adversary $\advA$ there exists an adversary $\advB$ against SXDH such that for any $\tilde{x}\in\Z_q^m$ and any $\vecb{\beta}\in\bits^m$  the probability that $\advA(k)$, $k\gets\KGen(gk,\tilde{\vecb{x}},\vecb{\beta})$, outputs a collision $[\vecb{x}]_2,[\vecb{x}']_2$ for $h_\matr{A}$  is less than $2m \adv_{\mathrm{SXDH}}(\advB)$. key.
 \end{lemma}
 \begin{proof}
 The proof follows from the indistinguishability of the following games.
 \begin{description}
 \item[$\sfGame_0(\advA)$:] This game honestly runs the colission resitance experiment for $h_{\matr{A}}$ and outputs 1 if $\vecb{x}\neq\vecb{x}'$ and $h_\matr{A}(\vecb{x})=h_{\matr{A}}(\vecb{x}')$.
-\item[$\sfGame_1(\advA)$:] This games picks a random $i\gets[m]$ and aborts if $[x_i]_2-[x'_i]=0.$
-\item[$\sfGame_2(\advA)$:] This game is exactly as $\sfGame_1$ but $[\matr{U}]_1$ is sampled from the perfectly hiding distribution.
-\item[$\sfGame_3(\advA)$:] This game is exactly as $\sfGame_2$ but $\matr{A}$ is sampled from $\matr{Q}_m^{\vecb{\beta}_i}$, where $\beta_i\in\bits^m$ contains a single 1 at postion $i$.
-\item[$\sfGame_4(\advA)$:] This game is exactly as $\sfGame_3$ but $[\matr{U}]_1$ is sampled from the perfectly binding distribution.
+\item[$\sfGame_1(\advA)$:] This games picks a random $i\gets[m]$ and aborts if $[x_i]_2=[x'_i].$
+\item[$\sfGame_2(\advA)$:] This game is exactly as $\sfGame_1$ but $[\matr{U}]_1$ and $[\matr{V}]_2$ are sampled from the perfectly hiding distribution.
+\item[$\sfGame_3(\advA)$:] This game is exactly as $\sfGame_2$ but $\matr{A}$ is sampled from $\matr{Q}_m^{\vecb{\beta}_i}$, where $\vecb{\beta}_i\in\bits^m$ contains a single 1 at postion $i$. Consequently, $[\matr{B}]_2,[\matr{C}]_2,[\matr{D}]_2$ and corresponding proofs are computed using $\vecb{\beta}_i$.
+\item[$\sfGame_4(\advA)$:] This game is exactly as $\sfGame_3$ but $[\matr{U}]_1$ and $[\matr{V}]_2$ are sampled from the perfectly binding distribution.
 \end{description}
-The probability we want to bound is $\Pr[\sfGame_0(A)=1]$ and it holds that $\Pr[\sfGame_0(\advA)=1]\leq m\Pr[\sfGame_1(A)=1]$ since $i$ is information theoretically hidden to $\advA$. It also holds that $\Pr[\sfGame_1(\advA)=1]-\Pr[\sfGame_2(\advA)=1]\leq\adv_\mathrm{DDH}(\advB)$, for adversary $\advB$, since the only change in the games is the Groth-Sahai commitment key wich is changed from perfectly binding to perfectly hiding.
-It also holds that $\Pr[\sfGame_2(\advA)=1]-\Pr[\sfGame_3(\advA)=1]=0$, since commitment keys are perfectly binding in both games, and similarly as before, $\Pr[\sfGame_4(\advA)=1]-\Pr[\sfGame_3(\advA)=1]\leq\adv_\mathrm{DDH}(\advB)$.
+The probability we want to bound is $\Pr[\sfGame_0(\advA)=1]$ and it holds that $\Pr[\sfGame_0(\advA)=1]\leq m\Pr[\sfGame_1(\advA)=1]$ since $i$ is information theoretically hidden to $\advA$, while there is at least one index $i^*\in[m]$ such that $x_{i^*} \neq x_{i^*}'$. It also holds that $\Pr[\sfGame_1(\advA)=1]-\Pr[\sfGame_2(\advA)=1]\leq\adv_\mathrm{SXDH}(\advB)$, for adversary $\advB$, since the only change in the games is the Groth-Sahai commitment key wich is changed from perfectly binding to perfectly hiding.
+
+It also holds that $\Pr[\sfGame_2(\advA)=1]-\Pr[\sfGame_3(\advA)=1]=0$, since commitment keys $[\matr{U}]_1,[\matr{V}]_2$ are perfectly hiding in both games, and hence, matrices $[\matr{A}]_1,[\matr{B}]_2,[\matr{C}]_2,[\matr{D}]_2$ follow exactly the same distribution in both games.
+%Note that, by the self-reducibility of DDH, we can change many ciphertexts at once without increasing  the security loss.\footnote{For completeness, assume that you want to switch from encryptions of $m_1,\ldots,m_\ell\in\Z_q$ to encryptions of $m'_1,\ldots,m'_\ell\in\Z_q$. Construct an adversary that asks to its left or right oracle for encryptions of $0$ or $1$, receives $[\vecb{c}]_2$ as challenge, and returns $[\vecb{c}_i] := m_i[\vecb{c}_i] + m'_i[\smallpmatrix{0\\1}-\vecb{c}_i]_2+\delta_i[\vecb{v}]_2$, $\delta_i\gets\Z_q$. Clearly, when $[\vecb{c}]_2$ encrypts $1$, then the adversary returns encryptions to $m_1,\ldots,m_\ell$, and when it encrypts $0$ returns encryptions to $m'_1,\ldots,m'_\ell$.} Note that, when changing the cyperthexts, we need to simulate proofs as in (\ref{eq:Qm-sim-proofs}) and (\ref{eq:sim-proofs}).
+Similarly as before, $\Pr[\sfGame_4(\advA)=1]-\Pr[\sfGame_3(\advA)=1]\leq\adv_\mathrm{SXDH}(\advB)$.
 
 Finaly, $\Pr[\sfGame_4(\advA)=1]=0$ since in this case $x_i \neq x'_i$ and $g_\matr{A}(\vecb{x}) = x_i$.
 \end{proof}
 
-A proof that $g_\matr{A}(\vecb{\beta}) = g_\matr{A}(\vecb{\beta}')$ can be derived from the sum of the previous proof plus re-randomization for keeping the proof zero-knowledge. That is
-$$
-[\vecb{\theta}]_2 := \sum_{i=1}^m [\vecb{\theta}_i]_2-\delta[\vecb{v}]_2
-\text{ and }
-[\vecb{\pi}]_1 := \sum_{i=1}^m [\vecb{\pi}_i]_1+\delta[\vecb{u}]_1.
-$$
-such that
-$$
-\left(\sum_{i=1}^m [\vecb{a}_i]\right)\pmatri{{[0]_1}\\{[x_i]_1}}^\top-\pmatri{{[0]_1}\\{[1]_1}}\left(\sum_{i=1}^m[\vecb{d}]_2\right)^\top =
-[\vecb{\pi}]_1[\vecb{v}^\top]_2 + [\vecb{u}_1][\vecb{\theta}_i^\top]_2
-$$ Consequetly, in our scheme we will publish  $[\vecb{\beta}_ix_i]_2$ and the proofs $[\vecb{\pi}_i]_1,[\vecb{\theta}_i]_2$ which will render possible to prove $g_\matr{A}(\vecb{\beta})=g_\matr{A}(\vecb{\beta}')$.
+%Next, we show that the function key $k$ allows to derive a proof that $g_\matr{A}(\vecb{x}) = g_\matr{A}(\vecb{x}')$.
+%To do so we only need to sum many of the proofs from Lemma \ref{lemma:betax=y} and add some re-randomization for keeping the proof zero-knowledge. That is
+%\begin{equation}
+%[\vecb{\psi}]_2 := \sum_{i=1}^m [\vecb{\psi}_i]_2-\delta[\vecb{v}_2]_2
+%\text{ and }
+%[\vecb{\omega}]_1 := \sum_{i=1}^m [\vecb{\omega}_i]_1+\delta[\vecb{u}_2]_1.
+%\label{eq:derived-proof}
+%\end{equation}
+%such that
+%\begin{equation}
+%\sum_{i=1}^m [\vecb{a}_i]_1[\vecb{c}_i^\top]-[\vecb{u}_1]_1\sum_{i=1}^m[\vecb{d}^\top]_2 =
+%[\vecb{\psi}]_1[\vecb{v}^\top_2]_2 + [\vecb{u}_2]_1[\vecb{\omega}_i^\top]_2.
+%\label{eq:derived-verififcation}
+%\end{equation}
+%
+%Consequetly, in our scheme we will publish  $[\vecb{\beta}_ix_i]_2$ and the proofs $[\vecb{\pi}_i]_1,[\vecb{\theta}_i]_2$ which will render possible to prove $g_\matr{A}(\vecb{\beta})=g_\matr{A}(\vecb{\beta}')$.
+%
+% Using the homomorphic properties of Groth-Sahai proofs it migth be derived a proof that
+%$$
+%[\matr{A}]_1([0]_2, [\vecb{x}']_2) - \pmatri{{[0]_1}\\{[1]_1}}[\vecb{x}^\top\matr{B}^\top]_2=[\vecb{\theta}]_1[\vecb{v}^\top_2]-[\vecb{u}]_1[\vecb{\pi}^\top]_2.
+%$$
+%If we multiply the previous equation by $\vecb{k}^\top$ on the left and by $\vecb{k}'$ on the right, we get that
+%\begin{align*}
+%\vecb{k}^\top[\matr{A}]_1([0]_2, [\vecb{x}']_2)\vecb{k}' - \vecb{k}^\top\pmatri{{[0]_1}\\{[1]_1}}[\vecb{x}^\top\matr{B}^\top]_2\vecb{k}'
+%&=
+%\vecb{k}^\top[\vecb{\theta}]_1[\vecb{v}^\top_2]\vecb{k}'-\vecb{k}^\top[\vecb{u}]_1[\vecb{\pi}^\top]_2\vecb{k}'\\
+%[\vecb{k}^\top\matr{A}\vecb{x}']_T(0, 1)\vecb{k}' - \vecb{k}^\top\pmatri{0\\1}[\vecb{x}^\top\matr{B}^\top\vecb{k}']_T
+%&=0\\
+%[g_\vecb{\matr{A}}(\vecb{x}')]_T - [g_\matr{A}(\vecb{x})]_T &= 0.
+%\end{align*}
+%Note that the previous idendity follows from the fact that $g_{\matr{B}}(\vecb{x}) = {\vecb{k}'}^\top\matr{B}\vecb{x}=\vecb{\beta}^\top\vecb{x}=g_\matr{A}(\vecb{x})$ and that $\vecb{k},\vecb{k}'$ are decryption keys and thus $\vecb{k}^\top\vecb{u}=\vecb{v}^\top\vecb{k}'=0$ and $\vecb{k}^\top\smallpmatrix{0\\1}=(0,1)\vecb{k}'=1$.
+%
+%Given a collision $[\vecb{\beta}]_2,[\vecb{\beta}']_2$ for $g$, then $([\vecb{\beta}]_2-[\vecb{\beta}]'_2)\neq [\vecb{0}]$ is in the kernel of $[\matr{A}]_1$. Therefore, is trivial to prove that for any adversary $\advA$ there is an adversary $\advB$ such that $\adv^{\mathsf{Col}_g}(\advA)=\adv_{\mathcal{Q}_m^\top\mbox{-}\skermdh}(\advB)$, whenever $\matr{A}\gets\mathcal{Q}_m$.
+%
+%We note that given $A\in Q_m,[\matr{A}]_1\in\GG^{2\times m}_1,[\vecb{\beta}]_2\in\GG^m_2$, $[\vecb{y}]_1\in\GG_2^2$ and $[\vecb{y}']_1\in\GG^1_2$ one can express the statements $A\in Q_m$, $g_{[\matr{A}]_1}([\vecb{\beta}]_2)=[\vecb{y}]_2$, and $h(A)=[\vecb{y}']_1$ as (\ref{eq:Q}),(\ref{eq:g}), and (\ref{eq:h}), respectively.
+% \begin{align}
+%&e([a_{1}]_1,[1]_2) = e([1]_1,[{b}_1]_2)\text{ and }e([a_{2}]_1,[1]_2)=e([a_{1}]_1,[b_1]_2)
+%\text{ for each }([\vecb{a}]_1,[\vecb{\beta}]_2)\in A \label{eq:Q}\\
+%&\sum_{j=1}^m e([a_{i,j}]_1,[x_i]_1) = e([1]_1,[y_i]_2) \text{ for each } i\in\{1,2\} \label{eq:g}\\
+%&\sum_{([\vecb{a}]_1,[\vecb{a}]_2)\in A} [a_i]_1 = [y'_i]_1 \text{ for each } i\in\{1,2\}.\label{eq:h}
+%\end{align}
+%Hence, one can compute Groth-Sahai proofs of size $\Theta(m),\Theta(1)$, and $\Theta(1)$, respectively, for the satisfiability of each statement.
 
- Using the homomorphic properties of Groth-Sahai proofs it migth be derived a proof that
-$$
-[\matr{A}]_1([0]_2, [\vecb{x}']_2) - \pmatri{{[0]_1}\\{[1]_1}}[\vecb{x}^\top\matr{B}^\top]_2=[\vecb{\theta}]_1[\vecb{v}^\top_2]-[\vecb{u}]_1[\vecb{\pi}^\top]_2.
-$$
-If we multiply the previous equation by $\vecb{k}^\top$ on the left and by $\vecb{k}'$ on the right, we get that
-\begin{align*}
-\vecb{k}^\top[\matr{A}]_1([0]_2, [\vecb{x}']_2)\vecb{k}' - \vecb{k}^\top\pmatri{{[0]_1}\\{[1]_1}}[\vecb{x}^\top\matr{B}^\top]_2\vecb{k}'
-&=
-\vecb{k}^\top[\vecb{\theta}]_1[\vecb{v}^\top_2]\vecb{k}'-\vecb{k}^\top[\vecb{u}]_1[\vecb{\pi}^\top]_2\vecb{k}'\\
-[\vecb{k}^\top\matr{A}\vecb{x}']_T(0, 1)\vecb{k}' - \vecb{k}^\top\pmatri{0\\1}[\vecb{x}^\top\matr{B}^\top\vecb{k}']_T
-&=0\\
-[g_\vecb{\matr{A}}(\vecb{x}')]_T - [g_\matr{A}(\vecb{x})]_T &= 0.
-\end{align*}
-Note that the previous idendity follows from the fact that $g_{\matr{B}}(\vecb{x}) = {\vecb{k}'}^\top\matr{B}\vecb{x}=\vecb{\beta}^\top\vecb{x}=g_\matr{A}(\vecb{x})$ and that $\vecb{k},\vecb{k}'$ are decryption keys and thus $\vecb{k}^\top\vecb{u}=\vecb{v}^\top\vecb{k}'=0$ and $\vecb{k}^\top\smallpmatrix{0\\1}=(0,1)\vecb{k}'=1$.
-
-Given a collision $[\vecb{\beta}]_2,[\vecb{\beta}']_2$ for $g$, then $([\vecb{\beta}]_2-[\vecb{\beta}]'_2)\neq [\vecb{0}]$ is in the kernel of $[\matr{A}]_1$. Therefore, is trivial to prove that for any adversary $\advA$ there is an adversary $\advB$ such that $\adv^{\mathsf{Col}_g}(\advA)=\adv_{\mathcal{Q}_m^\top\mbox{-}\skermdh}(\advB)$, whenever $\matr{A}\gets\mathcal{Q}_m$.
-
-We note that given $A\in Q_m,[\matr{A}]_1\in\GG^{2\times m}_1,[\vecb{\beta}]_2\in\GG^m_2$, $[\vecb{y}]_1\in\GG_2^2$ and $[\vecb{y}']_1\in\GG^1_2$ one can express the statements $A\in Q_m$, $g_{[\matr{A}]_1}([\vecb{\beta}]_2)=[\vecb{y}]_2$, and $h(A)=[\vecb{y}']_1$ as (\ref{eq:Q}),(\ref{eq:g}), and (\ref{eq:h}), respectively.
- \begin{align}
-&e([a_{1}]_1,[1]_2) = e([1]_1,[{b}_1]_2)\text{ and }e([a_{2}]_1,[1]_2)=e([a_{1}]_1,[b_1]_2)
-\text{ for each }([\vecb{a}]_1,[\vecb{\beta}]_2)\in A \label{eq:Q}\\
-&\sum_{j=1}^m e([a_{i,j}]_1,[x_i]_1) = e([1]_1,[y_i]_2) \text{ for each } i\in\{1,2\} \label{eq:g}\\
-&\sum_{([\vecb{a}]_1,[\vecb{a}]_2)\in A} [a_i]_1 = [y'_i]_1 \text{ for each } i\in\{1,2\}.\label{eq:h}
-\end{align}
-Hence, one can compute Groth-Sahai proofs of size $\Theta(m),\Theta(1)$, and $\Theta(1)$, respectively, for the satisfiability of each statement.
-
-Finally, we prove a simple lemma that relates both functions
+Finally, we prove a simple lemma that relates functions $h$ and $g$
 \begin{lemma}\label{lemma:hg}
-Let $A\gets Q_m,A'\in Q_m,[\vecb{\beta}]_2,[\vecb{\beta}']_2\in\GG^m_2$, and $[\matr{A}]_1,[\matr{A}']_1$ the matrices whose columns are the first component of the elements of $A$ and $A'$, respectively. Then $h(A)=h(A')$ and $g_{[\matr{A}]_1}([\vecb{\beta}]_2)=g_{[\matr{A}']_1}([\vecb{\beta}']_2)$ implies that $A'$ is a second preimage of $h(A)$ or there exists a permutation matrix $\matr{P}$ such that $g_{[\matr{A}]_1}([\vecb{\beta}]_2)=g_{[\matr{A}]_1}([\matr{P}\vecb{\beta}']_2)$.
+Let $A\gets Q_m,A'\in Q_m,[\vecb{x}]_2,[\vecb{x}']_2\in\GG^m_2$. Then $h(\matr{A})=h(\matr{A}')$ and $g_{\matr{A}}(\vecb{x})=g_{\matr{A}'}(\vecb{x}')$ implies that $\matr{A}'$ is a second preimage of $h(\matr{A})$ or there exists a permutation matrix $\matr{P}$ such that $g_{\matr{A}}(\vecb{x})=g_{\matr{A}}(\matr{P}\vecb{x}')$.
 \end{lemma}
 \begin{proof}
-If $A\neq A'$, then $A'$ is a second preimage of $h(A)$. Else, there is a permutation matrix $\matr{P}$ such that $[\matr{A}']_1 =[\matr{A}\matr{P}]_1$. Then
+If $\matr{A}\not\equiv_\matr{U} \matr{A}'$, then $\matr{A}'$ is a second preimage of $h(\matr{A})$. Else, there is a permutation matrix $\matr{P}$ and $\vecb{\delta}\in\Z_q^m$ such that $\matr{A}' =\matr{A}\matr{P}+\vecb{u}_2\vecb{\delta}^\top$. Then
 $$
- g_{[\matr{A}]_1}([\vecb{\beta}]_2)=g_{[\matr{A}']_1}([\vecb{\beta}']_2)\Longleftrightarrow  g_{[\matr{A}]_1}([\vecb{\beta}]_2)=g_{[\matr{A}\matr{P}]_1}([\vecb{\beta}']_2)=g_{[\matr{A}]_1}([\matr{P}\vecb{\beta}']_2).
+ g_{\matr{A}}(\vecb{x})=g_{\matr{A}'}(\vecb{x}')\Longleftrightarrow  g_{\matr{A}'}(\vecb{x})=g_{\matr{A}\matr{P}+\vecb{u}_2\vecb{\delta}^\top}(\vecb{x})=g_{\matr{A}\matr{P}}(\vecb{x}')=g_\matr{A}(\matr{P}\vecb{x}').
 $$
 \end{proof}
