--- a/preamble.tex
+++ b/preamble.tex
@@ -1,6 +1,7 @@
 \newcommand{\err}{\mathsf{err}}
 \newcommand{\wenc}[1]{\widetilde{[#1]}}
 \newcommand{\cat}{|}
+\newcommand{\hcat}{\mathbin{\!/\mkern-5mu/\!}}
 \newcommand{\dsum}{/}
 \newcommand{\pdsum}[2]{\mathrm{diag}(#1,#2)}
 
